aanmaken Components en loginPage

--- a/Css/_generalStyles.scss
+++ b/Css/_generalStyles.scss
@@ -3,11 +3,11 @@ $mainFont: cubano, sans-serif;
 $secondaryFont: proxima-soft, sans-serif;
 
 // Fonts sizes
-$headerFontSize: 50px;
-$mainFontSize: 16px;
+$headerFontSize: 3.125rem;
+$mainFontSize: 1rem;
 
 // Colors
 $mainColor: black;
 
 // Icons
-$iconSize: 25px;
+$iconSize: 1.5625rem;
