--- a/Css/login.css
+++ b/Css/login.css
@@ -1,23 +1,1 @@
-body .container {
-  height: 100vh;
-}
-
-body .container .row {
-  height: 100%;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-}
-
-body .container .row .col {
-  width: 200px;
-  height: 200px;
-  background-color: black;
-}
-/*# sourceMappingURL=login.css.map */
+/* No CSS *//*# sourceMappingURL=login.css.map */
