--- a/Css/overOns.css
+++ b/Css/overOns.css
@@ -47,46 +47,15 @@ body .fullpage .main {
 }
 
 body .fullpage .main .row {
-  height: 50vh;
+  margin: 150px 0;
 }
 
-body .fullpage .main .row .column-content {
-  height: 100%;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+body .fullpage .main .row:nth-child(1) {
+  margin: 100px 0;
 }
 
-body .fullpage .main .row .column-content h1 {
-  font-family: cubano, sans-serif;
-  font-size: 6.25rem;
-}
-
-body .fullpage .main .row .column-content p {
-  font-style: italic;
-}
-
-body .fullpage .main .row .column-picture {
-  height: 100%;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+body .fullpage .main .row:nth-child(2) {
+  margin: 0;
 }
 
 body .fullpage .main .row .column-header {
@@ -103,7 +72,7 @@ body .fullpage .main .row .column-header {
 
 body .fullpage .main .row .column-header .header-text {
   font-family: cubano, sans-serif;
-  font-size: 3.125rem;
+  font-size: 4.6875rem;
 }
 
 body .fullpage .main .row .column-header h4 {
@@ -112,6 +81,52 @@ body .fullpage .main .row .column-header h4 {
 
 body .fullpage .main .row .column-header p {
   font-family: proxima-soft, sans-serif;
+}
+
+body .fullpage .main .row .column-content {
+  height: 200px;
+}
+
+body .fullpage .main .row .column-content h1 {
+  font-family: cubano, sans-serif;
+  font-size: 3.125rem;
+}
+
+body .fullpage .main .row .column-content p {
+  font-style: italic;
+}
+
+body .fullpage .main .row .column-picture {
+  height: 100%;
+}
+
+body .fullpage .main .row .column-picture img {
+  width: 200px;
+  height: 200px;
+}
+
+body .fullpage .main .row .column-picture:nth-child(odd) {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+body .fullpage .main .row .column-picture:nth-child(even) {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 body .fullpage .main .row:first-child {
