--- a/Css/overOns.scss
+++ b/Css/overOns.scss
@@ -7,26 +7,12 @@ body{
         .main{
             margin-top: 6vh;
             .row{
-                height: 50vh;
-                .column-content{
-                    height: 100%;
-                    display: flex;
-                    flex-direction: column;
-                    justify-content: center;
-                    align-items: center;
-                    h1{
-                        font-family: $mainFont;
-                        font-size: $headerFontSize * 2;
-                    }
-                    p{
-                        font-style: italic;
-                    }
+                margin: 150px 0;
+                &:nth-child(1){
+                    margin: 100px 0;
                 }
-                .column-picture{
-                    height: 100%;
-                    display: flex;
-                    justify-content: center;
-                    align-items: center;
+                &:nth-child(2){
+                    margin: 0;
                 }
                 .column-header{
                     display: flex;
@@ -34,13 +20,40 @@ body{
                     justify-content: center;
                     .header-text{
                         font-family: $mainFont;
-                        font-size: $headerFontSize;
+                        font-size: $headerFontSize *1.5;
                     }
                     h4{
                         font-family: $secondaryFont;
                     }
                     p{
                         font-family: $secondaryFont;
+                    }
+                }
+                .column-content{
+                    height: 200px;
+                    h1{
+                        font-family: $mainFont;
+                        font-size: $headerFontSize;
+                    }
+                    p{
+                        font-style: italic;
+                    }
+                }
+                .column-picture{
+                    height: 100%;
+                    img{
+                        width: 200px;
+                        height: 200px;
+                    }
+                    &:nth-child(odd){
+                    display: flex;
+                    justify-content: flex-start;
+                    align-items: center;
+                    }
+                    &:nth-child(even){
+                        display: flex;
+                        justify-content: flex-end;
+                        align-items: center;
                     }
                 }
                 &:first-child{
