--- a/Css/contact.scss
+++ b/Css/contact.scss
@@ -1,34 +1,2 @@
 @import "./generalStyles";
-
-footer{
-    background-color: $mainColor;
-    font-size: $mainFontSize;
-    height: 300px;
-    color: white;
-    .column-footer1{
-        display: flex;
-        flex-direction: column;
-        justify-content: space-evenly;
-        .info{
-            display: flex;
-            ion-icon{
-                font-size: $iconSize;
-                margin: 3px 15px;
-            }
-            p{}
-        }
-    }
-    .column-footer2{
-        width: 100%;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        ion-icon{
-            font-size: $iconSize;
-            margin: 0 7.5px;
-        }
-    }
-    .column-footer3{
-
-    }
-}
+@import "./components";
