--- a/Css/overOns.scss
+++ b/Css/overOns.scss
@@ -4,7 +4,7 @@
 body{
     .fullpage{
         @extend %navigation;
-        .main{
+        main{
             margin-top: 10vh;
             .row{
                 .column-header{
@@ -12,21 +12,21 @@ body{
                     align-items: center;
                     justify-content: center;
                     .header-text{
-                        font-family: $mainFont;
+                        font-family: $headerFont;
                         font-size: $headerFontSize *1.5;
                     }
                     h4{
-                        font-family: $secondaryFont;
+                        font-family: $bodyFont;
                     }
                     p{
-                        font-family: $secondaryFont;
+                        font-family: $bodyFont;
                     }
                 }
                 .column-content{
                     box-sizing: border-box;
                     overflow: hidden;
                     h1{
-                        font-family: $mainFont;
+                        font-family: $headerFont;
                         font-size: $headerFontSize;
                     }
                     p{
