--- a/Css/contact.css
+++ b/Css/contact.css
@@ -1,1 +1,160 @@
-/* No CSS *//*# sourceMappingURL=contact.css.map */
+body .fullpage nav {
+  position: fixed;
+  width: 100%;
+  top: 0;
+  z-index: 1;
+}
+
+body .fullpage nav .brand {
+  font-family: cubano, sans-serif;
+  color: #011627;
+  font-size: 1.25rem;
+}
+
+body .fullpage nav div {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+}
+
+body .fullpage nav div .navigation-list {
+  color: #011627;
+}
+
+body .fullpage nav div .navigation-list li a {
+  padding: 0;
+  color: #011627;
+}
+
+body .fullpage nav div .navigation-list li a ion-icon {
+  color: #011627;
+  font-size: 1.5625rem;
+}
+
+body .fullpage nav div .navigation-list li .active {
+  text-decoration: underline;
+  color: #011627;
+}
+
+@media only screen and (max-width: 768px) {
+  body .fullpage nav div .navigation-list {
+    width: 100%;
+  }
+  body .fullpage nav div .navigation-list li:nth-child(5) {
+    display: none;
+  }
+}
+
+body .fullpage footer {
+  background-color: #011627;
+  color: #fdfffc;
+  margin: 0;
+}
+
+@media only screen and (max-width: 768px) {
+  body .fullpage footer .column2-footer {
+    -webkit-box-ordinal-group: 3;
+        -ms-flex-order: 2;
+            order: 2;
+  }
+}
+
+body .fullpage footer .column1-footer {
+  padding: 0;
+}
+
+body .fullpage footer .column1-footer .column1-footer-links a {
+  color: #fdfffc;
+  font-family: proxima-soft, sans-serif;
+  text-decoration: underline;
+}
+
+body .fullpage footer .column2-footer {
+  padding: 0;
+  font-family: proxima-soft, sans-serif;
+}
+
+body .fullpage footer .column2-footer h2 {
+  font-family: cubano, sans-serif;
+}
+
+body .fullpage footer .column2-footer a {
+  color: #fdfffc;
+}
+
+body .fullpage footer .column2-footer a ion-icon {
+  font-size: 1.5625rem;
+  margin: 0 5px;
+}
+
+body .fullpage footer .column3-footer {
+  padding: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
+  font-family: proxima-soft, sans-serif;
+}
+
+body .fullpage footer .column3-footer .column3-footer-info .info {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+body .fullpage footer .column3-footer .column3-footer-info .info ion-icon {
+  font-size: 1.5625rem;
+  margin: 0 15px;
+}
+
+body .fullpage footer .column3-footer .column3-footer-info .info a {
+  text-decoration: underline;
+  color: #fdfffc;
+}
+
+body .fullpage main {
+  margin-top: 10vh;
+  height: 90vh;
+}
+
+@media only screen and (max-width: 768px) {
+  body .fullpage main {
+    height: auto;
+  }
+}
+
+body .fullpage main .row .contact-form .contact-form-header h1 {
+  font-family: cubano, sans-serif;
+}
+
+body .fullpage main .row .contact-form .contact-form-input {
+  height: 400px;
+}
+
+body .fullpage main .row .contact-form .contact-form-input div div textarea {
+  resize: none;
+}
+
+body .fullpage main .row .contact-form .contact-form-input div button {
+  background-color: #011627;
+  color: #fdfffc;
+  max-height: 48px;
+}
+
+body .fullpage main .row .contact-map .contact-map-header h5 {
+  font-family: cubano, sans-serif;
+}
+
+body .fullpage main .row .contact-map .contact-map-maps iframe {
+  border-radius: 0.25rem;
+}
+/*# sourceMappingURL=contact.css.map */
