--- a/Css/contact.scss
+++ b/Css/contact.scss
@@ -1,2 +1,54 @@
 @import "./generalStyles";
 @import "./components";
+
+body{
+    .fullpage{
+        @extend %navigation;
+        main{
+            margin-top: 10vh;
+            height: 90vh;
+            @media only screen and (max-width: 768px){
+               height: auto;
+            }
+            .row{
+                .contact-form{
+                    .contact-form-header{
+                        h1{
+                            font-family: $headerFont;
+                        }
+                    }
+                    .contact-form-input{
+                        height: 400px;
+                        div{
+                            div{
+                                label{}
+                                input{}
+                                textarea{
+                                    resize: none;
+                                }
+                            }
+                            button{
+                                background-color: $primary1Color;
+                                color: $primary2Color;
+                                max-height: 48px;
+                            }
+                        }
+                    }
+                }
+                .contact-map{
+                    .contact-map-header{
+                        h5{
+                            font-family: $headerFont;
+                        }
+                    }
+                    .contact-map-maps{
+                        iframe{
+                            border-radius: 0.25rem;
+                        }
+                    }
+                }
+            }
+        }
+        @extend %footer;
+    }
+}
