--- a/Css/overOns.css
+++ b/Css/overOns.css
@@ -54,6 +54,14 @@ body .fullpage footer {
   margin: 0;
 }
 
+@media only screen and (max-width: 768px) {
+  body .fullpage footer .column2-footer {
+    -webkit-box-ordinal-group: 3;
+        -ms-flex-order: 2;
+            order: 2;
+  }
+}
+
 body .fullpage footer .column1-footer {
   padding: 0;
 }
