--- a/Css/login.css
+++ b/Css/login.css
@@ -47,4 +47,33 @@ body .fullpage nav div .navigation-list li .active {
     display: none;
   }
 }
+
+body .fullpage main {
+  margin-top: 10vh;
+  height: 90vh;
+}
+
+@media only screen and (max-width: 768px) {
+  body .fullpage main {
+    height: auto;
+  }
+}
+
+body .fullpage main .row .contact-form .contact-form-header h1 {
+  font-family: cubano, sans-serif;
+}
+
+body .fullpage main .row .contact-form .contact-form-input {
+  height: 400px;
+}
+
+body .fullpage main .row .contact-form .contact-form-input div div textarea {
+  resize: none;
+}
+
+body .fullpage main .row .contact-form .contact-form-input div button {
+  background-color: #011627;
+  color: #fdfffc;
+  max-height: 48px;
+}
 /*# sourceMappingURL=login.css.map */
