--- a/Css/winkelmandje.css
+++ b/Css/winkelmandje.css
@@ -130,12 +130,12 @@ body .fullpage main .winkelmandje .winkelmandje-details .winkelmandje-details-bo
 }
 
 body .fullpage main .winkelmandje .winkelmandje-details .winkelmandje-details-box .winkelmandje-details-box-title {
-  border-bottom: 1px solid #011627;
-  border-top: 1px solid #011627;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   font-family: proxima-soft, sans-serif;
+  border-bottom: 1px solid #011627;
+  border-top: 1px solid #011627;
 }
 
 body .fullpage main .winkelmandje .winkelmandje-details .winkelmandje-details-box .winkelmandje-details-box-title .winkelmandje-details-box-title-details {
@@ -154,6 +154,42 @@ body .fullpage main .winkelmandje .winkelmandje-details .winkelmandje-details-bo
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+}
+
+body .fullpage main .winkelmandje .winkelmandje-details .winkelmandje-details-box .winkelmandje-details-box-info {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  font-family: proxima-soft, sans-serif;
+  border-bottom: 1px solid #011627;
+}
+
+body .fullpage main .winkelmandje .winkelmandje-details .winkelmandje-details-box .winkelmandje-details-box-info .winkelmandje-details-box-info-details {
+  -webkit-box-flex: 3;
+      -ms-flex: 3;
+          flex: 3;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 100%;
+}
+
+body .fullpage main .winkelmandje .winkelmandje-details .winkelmandje-details-box .winkelmandje-details-box-info .winkelmandje-details-box-info-details .winkelmandje-details-box-info-details-product {
+  width: 50%;
+  height: 300px;
+  background-color: #011627;
+}
+
+body .fullpage main .winkelmandje .winkelmandje-details .winkelmandje-details-box .winkelmandje-details-box-info .winkelmandje-details-box-info-hoeveelheid-prijs-totaal {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   -webkit-box-flex: 1;
       -ms-flex: 1;
           flex: 1;
