--- a/Css/winkelmandje.scss
+++ b/Css/winkelmandje.scss
@@ -15,10 +15,10 @@ body{
                             }
                         }
                         .winkelmandje-details-box-title{
-                            border-bottom: 1px solid $primary1Color;
-                            border-top: 1px solid $primary1Color;
                             display: flex;
                             font-family: $bodyFont;
+                            border-bottom: 1px solid $primary1Color;
+                            border-top: 1px solid $primary1Color;
                             .winkelmandje-details-box-title-details{
                                 flex: 3;
                                 h4{}
@@ -31,6 +31,26 @@ body{
                                 h4{
 
                                 }
+                            }
+                        }
+                        .winkelmandje-details-box-info{
+                            display: flex;
+                            font-family: $bodyFont;
+                            border-bottom: 1px solid $primary1Color;
+                            .winkelmandje-details-box-info-details{
+                                flex: 3;
+                                display: flex;
+                                width: 100%;
+                                .winkelmandje-details-box-info-details-product{
+                                    width: 50%;
+                                    height: 300px;
+                                    background-color: $primary1Color;
+                                }
+                            }
+                            .winkelmandje-details-box-info-hoeveelheid-prijs-totaal{
+                                display: flex;
+                                justify-content: center;
+                                flex: 1;
                             }
                         }
                     }
